PharmaDemo/src/objects/Survey__c.object
<CustomObject>
    <description>Holds a list of questions that comprise this survey</description>
    <fields>
        <fullName>Completed_URL__c</fullName>
        <description>When the user clicks done from the last page, this URL will take them back somewhere.</description>
        <label>Completed URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description to display to the contact that completes the survey</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questions_per_page__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>How many questions will be presented on each page of the survey</inlineHelpText>
        <label>Questions per page</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <description>required since apex code cannot read the $Site global variable</description>
        <inlineHelpText>The base URL of the site where the user will take the survey. Found in Sites setup. Copy the default web address including any subdirectories into this field.</inlineHelpText>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>